--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -62,7 +62,7 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Security</a></li>  
+            <li><a href="security.html">Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
