--- a/assets/templates/crypto-b/templates/security.html
+++ b/assets/templates/crypto-b/templates/security.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>FAQ - +500crypto</title>
+  <title>Security - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -39,23 +39,16 @@
     </div>
     <div class="container">
       <div class="page-header__rules">
-        <h1>Faq</h1>
-        <b>How do I cancel an order?</b>
-        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
-        <b>Do you allow VPN/Tor connections?</b>
-        <p>Yes we do, however for best performance of the +500crypto web interface and API we recommend using a good and fast connection.</p>
-        <b>Can I trade on margin?</b>
-        <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
-        <b>What is a limit order?</b>
-        <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
-        <b>What is the order book?</b>
-        <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
-        <b>Why is my order stuck as an open order?</b>
-        <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-        <b>Is there a fee to transfer funds to and from +500crypto?</b>
-        <p>+500crypto does not charge any transfer fees for moving funds between your Coinbase account and +500crypto account.</p>
-        <b>Why is my "available" balance less than my total?</b>
-        <p class="page-header--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
+        <h1>Security</h1>
+        <b>Cryptocurrency storage</b>
+        <p>Deep tight storage:<br>A large number of our customer's Bitcoin funds are kept and stored what we call “deep and tight storage”. These are wallets with multi-signatures and they all have private keys kept in secured bank vaults. There is no more than one person that has access or controls more than one key. Spending any cryptocurrency from deep tight storage will require a well and careful and specific efforts with numerous layers of encryption and coding. So also, the wallet backups are saved in various encrypted formats.</p>
+        <p>Secured wallet:<br>Plus500crypto has a multi-signature wallet to enhance very quick cryptocurrency withdrawals. One out of the two keys are controlled my us, and the other is held by a multi-signature custodian leader. This method was adopted to ensure the wallet is always secured. Because anybody that tries to hack any wallet will have to compromise both accounts and that is practically impossible to do.</p>
+        <b>Authentication</b>
+        <p>Password:<br>passwords used on Plus500crypto are saved and stored in hashed forms. You alone have every access to your password. We try a s much as possible to make sure our clients use very strong passwords on signing up. We also advise the use of last pass, keychain or any good password saver.</p>
+        <p>Two factor authentications:<br>The two-factor authentication is designed to give a higher and advanced level of authentication and to guarantee rest of mind to the customers not having anything to worry about be it funds or relevant personal information. With these options enabled, you give your account another layer of security by generating a one-time password to your smart phone or devices.</p>
+        <b>Company security principles</b>
+        <p>Site, service and staff:<br>All the services at Plus500crypto and communications happens over SSL-secured ports. The wallets are secured using the PGP encryption codes. It’s practically impossible for a single individual to have direct access to customer's funds. Financial and security auditing makes sure the various funds are 100% safe. Plus500crypto runs a background check on all personnel and workers to ensure efficiency and trust between us and our customers.</p>
+        <p class="page-header--pb">Personal information:<br>All personally identifiable information such as names, ID numbers and identity documents scan copy are tightly encrypted, secured and saved in a good location. The access to this information are strictly on a need-to-know basis.</p>
       </div>
     </div>
   </header>
@@ -76,13 +69,13 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="security.html">Security</a></li>  
+            <li class="page-footer--active"><a>Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li class="page-footer--active"><a>FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
             <li><a href="support.html">Support</a></li>
