--- a/assets/templates/crypto-b/templates/support.html
+++ b/assets/templates/crypto-b/templates/support.html
@@ -39,7 +39,7 @@
         </div>
         <div class="page-header__support-right">
           <h1>Contact Us</h1>
-          <p><b>Support email:</b> support@+500crypto.com</p>
+          <p><b>Support email:</b> support@plus500crypto.com</p>
           <p><b>Support phone:</b> +35722000974</p>
           <p><b>Monday</b> to <b>Friday</b></p>
           <p class="page-header--pb">between <b>10:00</b> to <b>18:00</b> GMT</p>
@@ -64,7 +64,7 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Security</a></li>  
+            <li><a href="security.html">Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
