--- a/assets/templates/crypto-b/templates/contact.html
+++ b/assets/templates/crypto-b/templates/contact.html
@@ -40,7 +40,10 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>Contact Us</h1>
-        <p class="page-header--pb">GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
+        <p><b>Support email:</b> support@plus500crypto.com</p>
+        <p><b>Support phone:</b> +35722000974</p>
+        <p><b>Monday</b> to <b>Friday</b></p>
+        <p class="page-header--pb">between <b>10:00</b> to <b>18:00</b> GMT</p>
       </div>
     </div>
   </header>
@@ -61,7 +64,7 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li class="page-footer--active"><a>Contact</a></li>
-            <li><a href="#">Security</a></li>  
+            <li><a href="security.html">Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
