--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -143,7 +143,7 @@
             <li><a href="#">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="templates/contact.html">Contact</a></li>
-            <li><a href="#">Security</a></li>  
+            <li><a href="templates/security.html">Security</a></li>  
           </ul>
         </div>
         <div class="page-footer__column">
