--- a/assets/templates/crypto-b/templates/trading.html
+++ b/assets/templates/crypto-b/templates/trading.html
@@ -15,21 +15,21 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="CryptoLogic">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic"> -->
+                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="login.html">Login</a></li>
-                <li class="page-header__item"><a href="registration.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="login.html">Login</a></li>
-                <li class="page-header__item"><a href="registration.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -73,8 +73,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="login.html">Sign In</a></li>
-            <li><a href="registration.html">Sign Up</a></li>
+            <li><a href="https://client.plus500crypto.com/en/members/login">Sign In</a></li>
+            <li><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
