--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -20,7 +20,7 @@
         <div class="page-header__menu">
           <nav class="page-header__main-nav">
             <ul class="main-nav__list">
-              <li class="main-nav__item"><a href="template/login.html">LOGIN</a></li>
+              <li class="main-nav__item"><a href="https://client.cryptologi.com/en/members/login">LOGIN</a></li>
               <li class="main-nav__item"><a href="template/contact.html">CONTACT</a></li>
               <li class="main-nav__item"><a href="https://client.cryptologi.com/en/members/register/real/">LOG UP</a></li>
             </ul>
