--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -14,22 +14,22 @@
         <div class="container">
           <div class="page-header__flex">
             <div class="page-header__logo">
-              <a href="#">
-                <img class="page-header__logo" src="img/logo.png" alt="CryptoLogic">
-                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic"> -->
+              <a>
+                <img class="page-header__logo" src="img/logo.png" alt="plus500crypto">
+                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="plus500crypto"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="templates/login.html">Login</a></li>
-                <li class="page-header__item"><a href="templates/registration.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="templates/login.html">Login</a></li>
-                <li class="page-header__item"><a href="templates/registration.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -97,7 +97,7 @@
       <div class="crypto__flex">
         <h1>A cryptobank for everyone</h1>
         <p>In 8 years’ time, the crypto-economy will exceed 1 trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
-        <a href="templates/registration.html">Create Account</a>
+        <a href="https://client.plus500crypto.com/en/members/register/real/">Create Account</a>
       </div>
     </div>
   </section>
@@ -132,8 +132,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="templates/login.html">Sign In</a></li>
-            <li><a href="templates/registration.html">Sign Up</a></li>
+            <li><a href="https://client.plus500crypto.com/en/members/login">Sign In</a></li>
+            <li><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
