--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -78,11 +78,11 @@
     <div class="container">
       <div class="news__flex">
         <div class="news__left-column">
-          <b>WHY +500crypto</b>
+          <b>WHY TO CHOOSE +500crypto</b>
           <p>+500crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. </p>
         </div>
         <div class="news__middle-column">
-          <b>A NEW TYPE OF INVECTMENT</b>
+          <b>A NEW TYPE OF INVESTMENT</b>
           <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. +500crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
