--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -140,7 +140,7 @@
           <b>About</b>
           <ul>
             <li><a href="templates/about.html">About Us</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="templates/careers.html">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="templates/contact.html">Contact</a></li>
             <li><a href="templates/security.html">Security</a></li>  
