--- a/assets/templates/crypto-b/templates/security.html
+++ b/assets/templates/crypto-b/templates/security.html
@@ -44,7 +44,7 @@
         <p>Deep tight storage:<br>A large number of our customer's Bitcoin funds are kept and stored what we call “deep and tight storage”. These are wallets with multi-signatures and they all have private keys kept in secured bank vaults. There is no more than one person that has access or controls more than one key. Spending any cryptocurrency from deep tight storage will require a well and careful and specific efforts with numerous layers of encryption and coding. So also, the wallet backups are saved in various encrypted formats.</p>
         <p>Secured wallet:<br>Plus500crypto has a multi-signature wallet to enhance very quick cryptocurrency withdrawals. One out of the two keys are controlled my us, and the other is held by a multi-signature custodian leader. This method was adopted to ensure the wallet is always secured. Because anybody that tries to hack any wallet will have to compromise both accounts and that is practically impossible to do.</p>
         <b>Authentication</b>
-        <p>Password:<br>passwords used on Plus500crypto are saved and stored in hashed forms. You alone have every access to your password. We try a s much as possible to make sure our clients use very strong passwords on signing up. We also advise the use of last pass, keychain or any good password saver.</p>
+        <p>Password:<br>Passwords used on Plus500crypto are saved and stored in hashed forms. You alone have every access to your password. We try a s much as possible to make sure our clients use very strong passwords on signing up. We also advise the use of last pass, keychain or any good password saver.</p>
         <p>Two factor authentications:<br>The two-factor authentication is designed to give a higher and advanced level of authentication and to guarantee rest of mind to the customers not having anything to worry about be it funds or relevant personal information. With these options enabled, you give your account another layer of security by generating a one-time password to your smart phone or devices.</p>
         <b>Company security principles</b>
         <p>Site, service and staff:<br>All the services at Plus500crypto and communications happens over SSL-secured ports. The wallets are secured using the PGP encryption codes. It’s practically impossible for a single individual to have direct access to customer's funds. Financial and security auditing makes sure the various funds are 100% safe. Plus500crypto runs a background check on all personnel and workers to ensure efficiency and trust between us and our customers.</p>
@@ -66,7 +66,7 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="careers.html">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="page-footer--active"><a>Security</a></li>  
