--- a/assets/templates/crypto-b/templates/support.html
+++ b/assets/templates/crypto-b/templates/support.html
@@ -61,7 +61,7 @@
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="careers.html">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="security.html">Security</a></li>  
