--- a/assets/templates/crypto-b/templates/careers.html
+++ b/assets/templates/crypto-b/templates/careers.html
@@ -56,58 +56,70 @@
           <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
           <h3>Responsibilities</h3>
           <p>As an Engineer with Plus500crypto you’ll be a principal member of the team that builds the  Plus500crypto core platform: that is, the trading engine, data analysis algorithms, API, wallet management, 3rd party integrations, etc.</p>
-          <p><b>1. The Architecture:</b> Plus500crypto backend is built with the micro-services architecture in mind. Redundancy and high availability are main factors and lead every choice made to design each piece on the platform.</p>
-          <p><b>2. Trading engine:</b> best in class trading engine across all trading and crypto exchanges. Contribute to design, new order types development, performance tuning and research.</p>
-          <p><b>3. Data analysis algorithms:</b> the data we present to our users is the result of tailored algorithms on top of the incredible amount of data our platform produces daily.</p>
-          <p><b>4. APIs:</b> the public face the presents the complexity of our architecture in a clean interface. Design, develop and improve trading and account management APIs on top of Web Sockets, REST and custom high-performance protocol.</p>
+          <ul>
+            <li><b>The Architecture:</b> Plus500crypto backend is built with the micro-services architecture in mind. Redundancy and high availability are main factors and lead every choice made to design each piece on the platform.</li>
+            <li><b>Trading engine:</b> best in class trading engine across all trading and crypto exchanges. Contribute to design, new order types development, performance tuning and research.</li>
+            <li><b>Data analysis algorithms:</b> the data we present to our users is the result of tailored algorithms on top of the incredible amount of data our platform produces daily.</li>
+            <li><b>APIs:</b> the public face the presents the complexity of our architecture in a clean interface. Design, develop and improve trading and account management APIs on top of Web Sockets, REST and custom high-performance protocol.</li>
+          </ul>
           <h3>Requirements</h3>
-          <p>1.	Self-motivated and Responsible. No one on the team will micro-manage you. We are looking for team members who are comfortable taking an initiative</p>
-          <p>2.	Knowledge and experience in micro-services architecture</p>
-          <p>3.	Comfortable with high-availability concepts</p>
-          <p>4.	Have actively participated in the development of a sophisticated platform as one of the leading developers</p>
-          <p>5.	Extreme dedication to work</p>
-          <p>6.	Ability to quickly learn new technologies</p>
-          <p>7.	Preferred technologies: Ruby, Node.js, MySQL, Redis, Websockets</p>
-          <p>8.	Other technologies of interest: Message queues (ZeroMQ, RabbitMQ), Job Queues</p>
+          <ul>
+            <li>Self-motivated and Responsible. No one on the team will micro-manage you. We are looking for team members who are comfortable taking an initiative</li>
+            <li>Knowledge and experience in micro-services architecture</li>
+            <li>Comfortable with high-availability concepts</li>
+            <li>Have actively participated in the development of a sophisticated platform as one of the leading developers</li>
+            <li>Extreme dedication to work</li>
+            <li>Ability to quickly learn new technologies</li>
+            <li>Preferred technologies: Ruby, Node.js, MySQL, Redis, Websockets</li>
+            <li>Other technologies of interest: Message queues (ZeroMQ, RabbitMQ), Job Queues</li>
+          </ul>
           <p>As many that meets the requirement and Interested in this position? Please us an email and introduce yourself, explaining what position you are interested in and why you think you are a good fit.</p><br>
         <h2>2. General manager – Europe region</h2>
           <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
           <h3>Responsibilities</h3>
-          <p>1. Take ownership of the Europe region and drive market leadership & success</p>
-          <p>2. Shape regional Plus500crypto strategy through industry & competitor analysis</p>
-          <p>3. Own and shape the product for the region</p>
-          <p>4. Help co-ordinate regional marketing campaigns</p>
-          <p>5. Develop and maintain relationships with key stakeholders in market - regulators, partners, banks, merchants, media</p>
-          <p>6. Optimize processes across the local business to run an efficient business</p>
-          <p>7. Help to recruit and manage the European team and local country teams</p>
+          <ul>
+            <li>Take ownership of the Europe region and drive market leadership & success</li>
+            <li>Shape regional Plus500crypto strategy through industry & competitor analysis</li>
+            <li>Own and shape the product for the region</li>
+            <li>Help co-ordinate regional marketing campaigns</li>
+            <li>Develop and maintain relationships with key stakeholders in market - regulators, partners, banks, merchants, media</li>
+            <li>Optimize processes across the local business to run an efficient business</li>
+            <li>Help to recruit and manage the European team and local country teams</li>
+          </ul>
           <h3>Requirements</h3>
-          <p>1. A relevant university qualification from a top university or business school</p>
-          <p>2. 4-8 years work experience</p>
-          <p>3. A valid UK work visa preferred. The position is based at our London office</p>
-          <p>4. Entrepreneurial, strong sense of responsibility and very high level of integrity</p>
-          <p>5. Excellent interpersonal, communication, leadership and negotiation skills</p>
-          <p>6. Friendly, transparent, articulate and driven to succeed</p>
-          <p>7. Someone who has a bias for action and can get things done</p>
-          <p>8. Preferably a basic knowledge of how crypto-currencies like Bitcoin work</p><br>
+          <ul>
+            <li>A relevant university qualification from a top university or business school</li>
+            <li>4-8 years work experience</li>
+            <li>A valid UK work visa preferred. The position is based at our London office</li>
+            <li>Entrepreneurial, strong sense of responsibility and very high level of integrity</li>
+            <li>Excellent interpersonal, communication, leadership and negotiation skills</li>
+            <li>Friendly, transparent, articulate and driven to succeed</li>
+            <li>Someone who has a bias for action and can get things done</li>
+            <li>Preferably a basic knowledge of how crypto-currencies like Bitcoin work</li>
+          </ul><br>
         <h2>3. Fraud Analyst</h2>
           <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
-          <h3>Responsibilities</h3>          
-          <p>1. Support Plus500crypto fraud prevention efforts across multiple geographies</p>
-          <p>2. Play a key role in the continuous development and monitoring of the fraud prevention functions</p>
-          <p>3. Perform market analysis and detailed investigations on high risk accounts or transactions</p>
-          <p>4. Analyze company data by grouping and analyzing the fraudulent cases</p>
-          <p>5. Analyze the processes and provide suggestions on how to reduce the proportion of fraudulent transactions</p>
-          <p>6. Prepare monthly and ad-hoc reports to management</p>
-          <p>7. Investigate and report suspicious activity</p>
+          <h3>Responsibilities</h3> 
+          <ul>
+            <li>Support Plus500crypto fraud prevention efforts across multiple geographies</li>
+            <li>Play a key role in the continuous development and monitoring of the fraud prevention functions</li>
+            <li>Perform market analysis and detailed investigations on high risk accounts or transactions</li>
+            <li>Analyze company data by grouping and analyzing the fraudulent cases</li>
+            <li>Analyze the processes and provide suggestions on how to reduce the proportion of fraudulent transactions</li>
+            <li>Prepare monthly and ad-hoc reports to management</li>
+            <li>Investigate and report suspicious activity</li>
+          </ul>         
           <h3>Requirements</h3>
-          <p>1. University degree from reputable tertiary institution</p>
-          <p>2. 1-3 years work experience</p>
-          <p>3. High proficiency in English</p>
-          <p>4. Strong desire to learn new information and techniques in a constantly evolving field</p>
-          <p>5. Attention to detail, strong sense of responsibility and very high level of integrity</p>
-          <p>6. Excellent interpersonal, communication and negotiation skills</p>
-          <p>7. Prior experience in a similar role preferred</p>
-          <p class="page-header--pb">8. Familiarity with Bitcoin and other crypto-currencies will be highly advantageous</p>
+          <ul>
+            <li>University degree from reputable tertiary institution</li>
+            <li>1-3 years work experience</li>
+            <li>High proficiency in English</li>
+            <li>Strong desire to learn new information and techniques in a constantly evolving field</li>
+            <li>Attention to detail, strong sense of responsibility and very high level of integrity</li>
+            <li>Excellent interpersonal, communication and negotiation skills</li>
+            <li>Prior experience in a similar role preferred</li>
+            <li class="page-header--pb">Familiarity with Bitcoin and other crypto-currencies will be highly advantageous</li>
+          </ul>
       </div>
     </div>
   </header>
