--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -105,8 +105,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>NO EXPERIENCE?</h2>
-        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? +500crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
-</p>
+        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? +500crypto has you covered; So sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading.</p>
       </div>
     </div>
     <div class="trading__coin">
@@ -125,7 +124,7 @@
       </div>
     </div>
   </section>
-  <section class="coin"></section>
+  <!-- <section class="coin"></section> -->
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
