--- a/assets/templates/crypto-b/sass/blocks/crypto.scss
+++ b/assets/templates/crypto-b/sass/blocks/crypto.scss
@@ -3,7 +3,7 @@
   // min-height: 635px;
   background: #000 url("../img/crypto-bg.png") no-repeat bottom;
   background-size: cover;
-  border-bottom: 10px solid #e94444;
+  // border-bottom: 10px solid #e94444;
   
   & h1 {
     padding: 10px 0;
