--- a/assets/templates/forex/sass/global/base.scss
+++ b/assets/templates/forex/sass/global/base.scss
@@ -9,6 +9,11 @@ body {
   margin: auto;
 }
 
+.container__temp {
+  width: 1350px;
+  margin: auto;
+}
+
 @media screen and ($tablet-widths) {
   // .container {
   //   width: 768px;
