--- a/assets/templates/forex/sass/blocks/page-header.scss
+++ b/assets/templates/forex/sass/blocks/page-header.scss
@@ -37,6 +37,12 @@
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
+  transition: 0.3s;
+  
+  &:hover {
+    color: $mc;
+    background: $sc;
+  }
 }
 
 .page-header__link--violet {
