--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -383,6 +383,8 @@ input::placeholder {
     align-items: center; }
   .container {
     width: 95%; }
+  .page-header {
+    min-height: 1600px; }
   .page-header__logo {
     width: 250px;
     margin-top: 5px; }
@@ -426,7 +428,7 @@ input::placeholder {
   .container {
     width: 95%; }
   .page-header {
-    min-height: 890px; }
+    min-height: 1730px; }
   .page-header__logo {
     width: 250px;
     margin-top: 15px; }
