--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -46,15 +46,14 @@
     <div class="container">
       <!-- <div class="row"> -->
       <div class="panel__flex">
-        <div class="col-md-5 col-md-offset-1 price-boxes">
+        <div class="price-boxes">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
   							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
-  							<h2 class="price-display">BTC - USD <span class="price" id="PRICE_BTC"></span></h2>
+  							<h2 class="price-display">BTCUSD <span class="price" id="PRICE_BTC"></span></h2>
   							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_BTC"></span><br></h5>
   							<h5>Last Market: <span class="exchange" id="LASTMARKET_BTC"></span> <br></h5>
-  							<h5>Trade ID: <span id="LASTTRADEID_BTC"></span><br></h5>
   							<h5>Open Hour: <span id="OPENHOUR_BTC"></span><br></h5>
   							<h5>High Hour: <span id="HIGHHOUR_BTC"></span><br></h5>
   							<h5>Low Hour: <span id="LOWHOUR_BTC"></span><br></h5>
@@ -69,15 +68,14 @@
   					</div>
   				</div>
   			</div>
-  			<div class="col-md-5 price-boxes">
+  			<div class="price-boxes">
   				<div class="panel-group">
   					<div class="panel panel-default">
   						<div class="panel-body">
   							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
-  							<h2 class="price-display">ETH - USD <span class="price" id="PRICE_ETH"></span></h2>
+  							<h2 class="price-display">ETHUSD <span class="price" id="PRICE_ETH"></span></h2>
   							<h5>24h Change: <span id="CHANGE24HOUR_ETH"></span><span id="CHANGE24HOURPCT_ETH"></span><br></h5>
   							<h5>Last Market: <span class="exchange" id="LASTMARKET_ETH"></span> <br></h5>
-  							<h5>Trade ID: <span id="LASTTRADEID_ETH"></span><br></h5>
   							<h5>Open Hour: <span id="OPENHOUR_ETH"></span><br></h5>
   							<h5>High Hour: <span id="HIGHHOUR_ETH"></span><br></h5>
   							<h5>Low Hour: <span id="LOWHOUR_ETH"></span><br></h5>
@@ -88,6 +86,28 @@
   							<h5>Last Trade Volume To: <span id="LASTVOLUMETO_ETH"></span><br></h5>
   							<h5>24h Volume: <span id="VOLUME24HOUR_ETH"></span><br></h5>
   							<h5>24h VolumeTo: <span id="VOLUME24HOURTO_ETH"></span><br></h5>
+  						</div>
+  					</div>
+  				</div>
+  			</div>
+        <div class="price-boxes">
+  				<div class="panel-group">
+  					<div class="panel panel-default">
+  						<div class="panel-body">
+  							<!-- <h6><a href="https://www.cryptocompare.com">Source: CryptoCompare.com</a></h6> -->
+  							<h2 class="price-display">LTCUSD <span class="price" id="PRICE_LTC"></span></h2>
+  							<h5>24h Change: <span id="CHANGE24HOUR_BTC"></span><span id="CHANGE24HOURPCT_LTC"></span><br></h5>
+  							<h5>Last Market: <span class="exchange" id="LASTMARKET_LTC"></span> <br></h5>
+  							<h5>Open Hour: <span id="OPENHOUR_LTC"></span><br></h5>
+  							<h5>High Hour: <span id="HIGHHOUR_LTC"></span><br></h5>
+  							<h5>Low Hour: <span id="LOWHOUR_LTC"></span><br></h5>
+  							<h5>Open Day: <span id="OPEN24HOUR_LTC"></span><br></h5>
+  							<h5>High Day: <span id="HIGH24HOUR_LTC"></span><br></h5>
+  							<h5>Low Day: <span id="LOW24HOUR_LTC"></span><br></h5>
+  							<h5>Last Trade Volume: <span id="LASTVOLUME_LTC"></span><br></h5>
+  							<h5>Last Trade Volume To: <span id="LASTVOLUMETO_LTC"></span><br></h5>
+  							<h5>24h Volume: <span id="VOLUME24HOUR_LTC"></span><br></h5>
+  							<h5>24h VolumeTo: <span id="VOLUME24HOURTO_LTC"></span><br></h5>
   						</div>
   					</div>
   				</div>
