--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -64,6 +64,10 @@
     width: 95%;
   }
   
+  .page-header {
+    min-height: 1600px;
+  }
+  
   .page-header__logo {
     width: 250px;
     margin-top: 5px;
@@ -123,7 +127,7 @@
   }
   
   .page-header {
-    min-height: 890px;
+    min-height: 1730px;
   }
   
   .page-header__logo {
