--- a/assets/templates/crypto-b/sass/blocks/page-header.scss
+++ b/assets/templates/crypto-b/sass/blocks/page-header.scss
@@ -64,9 +64,9 @@
     width: 95%;
   }
   
-  .page-header {
-    min-height: 1600px;
-  }
+  // .page-header {
+  //   min-height: 1300px;
+  // }
   
   .page-header__logo {
     width: 250px;
@@ -126,9 +126,9 @@
     width: 95%;
   }
   
-  .page-header {
-    min-height: 1730px;
-  }
+  // .page-header {
+  //   min-height: 1730px;
+  // }
   
   .page-header__logo {
     width: 250px;
