--- a/assets/templates/crypto-b/api/style.css
+++ b/assets/templates/crypto-b/api/style.css
@@ -7,10 +7,13 @@
 .panel__flex {
 	display: flex;
 	justify-content: space-around;
+	flex-wrap: wrap;
+	padding-top: 90px;
 }
 
 .panel {
-	margin: 45px 0;
+	/* margin-top: 90px; */
+	margin-bottom: 30px;
 	padding-bottom: 20px;
 	width: 400px;
 	font-size: 18px;
@@ -61,6 +64,10 @@ span {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+	.panel__flex {
+		padding-top: 30px;
+	}
+	
   .panel {
 		width: 300px;
 	}
@@ -69,10 +76,10 @@ span {
 @media only screen and (min-width : 320px) and (max-width : 480px) {
   .panel__flex {
 		flex-direction: column;
+		padding: 30px 0;
 	}
 	
 	.panel {
 		width: auto;
-		margin-bottom: 0;
 	}
 }
